--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-spring/web": "^9.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-tinder-card": "^1.6.2"
+    "react-tinder-card": "^1.6.2",
+    "sass": "^1.66.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
